project_sources/collector/fixtures/powershell_analysis/bad/state_changing_function.ps1
function Remove-DcoirFixtureOutput {
    param([string]$Path)
    Remove-Item -Path $Path -Recurse -Force
}
